--- a/index.html
+++ b/index.html
@@ -40,19 +40,13 @@
     return 1.337 * wizardWidth;
   };
   var getFireballSpeed = function (left) {
-    var fireballSpeed;
-    if (left) {
-      fireballSpeed = 5;
-    } else {
-      fireballSpeed = 2;
-    }
-    return fireballSpeed;
+    return left ? 5 : 2;
   };
   function getWizardX (width) {
-    return width * 0.5 - 0.5 * wizardWidth;
+    return width / 2 - wizardWidth / 2;
   };
   function getWizardY (height) {
-    return height * 2 / 3 - 0.5 * getWizardHeight();
+    return height * 1 / 3;
   };
 </script>
 <script src="js/game.js" type="application/javascript"></script>
