--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   };
   function getWizardX (width) {
     return width / 2 - wizardWidth / 2;
-  };
+  }
   function getWizardY (height) {
     return height * 1 / 3;
-  };
+  }
 </script>
+<script src="js/stat.js" type="application/javascript"></script>
 <script src="js/game.js" type="application/javascript"></script>
-
 </body>
 </html>
