--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
   <div class="demo"></div>
 
-  <div class="setup-open" role="button" aria-label="Кнопка открытия диалога редактирования персонажа" tabindex="0">
-    <img src="./img/user-1.jpg" class="setup-open-icon">
+  <div class="setup-open">
+    <img src="./img/user-1.jpg" class="setup-open-icon" role="button" aria-label="Кнопка открытия диалога редактирования персонажа" aria-pressed="false" tabindex="0">
   </div>
 </header>
 
 <div class="overlay setup invisible" role="dialog" aria-label="Диалог редактирования персонажа" aria-hidden="true">
   <form class="setup-wizard-form">
-    <span class="setup-close" role="button" aria-label="Кнопка закрытия диалога редактирования персонажа" tabindex="0">&times;</span>
+    <span class="setup-close" role="button" aria-label="Кнопка закрытия диалога редактирования персонажа" aria-pressed="true" tabindex="0">&times;</span>
 
     <div class="setup-user">
       <img class="setup-user-pic" src="./img/user-1.jpg" />
@@ -98,7 +98,7 @@
       <div class="setup-artifacts-cell"></div>
     </div>
 
-    <button class="button setup-submit" role="button" aria-label="Кнопка сохранения настроек персонажа" tabindex="0">Сохранить</button>
+    <button class="button setup-submit" aria-label="Кнопка сохранения настроек персонажа" tabindex="0">Сохранить</button>
   </form>
 </div>
 
